tests/baselines/reference/differentTypesWithSameName.errors.txt
differentTypesWithSameName.ts(3,5): error TS2564: Property 's' has no initializer and is not definitely assigned in the constructor.
differentTypesWithSameName.ts(11,2): error TS2564: Property 't' has no initializer and is not definitely assigned in the constructor.
differentTypesWithSameName.ts(16,15): error TS2345: Argument of type 'variable' is not assignable to parameter of type 'm.variable'.
  Property 's' is missing in type 'variable' but required in type 'm.variable'.


==== differentTypesWithSameName.ts (3 errors) ====
    namespace m {
      export class variable{
        s: string;
        ~
!!! error TS2564: Property 's' has no initializer and is not definitely assigned in the constructor.
      }
      export function doSomething(v: m.variable) {
        
      }
    }
    
    class variable {
     t: number;
     ~
!!! error TS2564: Property 't' has no initializer and is not definitely assigned in the constructor.
    }
    
    
    var v: variable = new variable();
    m.doSomething(v);
                  ~
!!! error TS2345: Argument of type 'variable' is not assignable to parameter of type 'm.variable'.
!!! error TS2345:   Property 's' is missing in type 'variable' but required in type 'm.variable'.
!!! related TS2728 differentTypesWithSameName.ts:3:5: 's' is declared here.